# devin-issue-triage

./: README.md
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css
dashboard/src/components/: FileInvestigationInput.tsx  FileMissionInput.tsx  HeaderBar.tsx  InvestigationCard.tsx  InvestigationColumn.tsx  MetricsPanel.tsx  MissionCard.tsx  MissionColumn.tsx  TelemetryStrip.tsx
dashboard/src/hooks/: useIssueTriage.ts  useMissionControl.ts
dashboard/src/types/: investigation.ts  mission.ts
orchestrator/: SIMULATION_VS_REAL.md  pyproject.toml
orchestrator/app/: config.py  main.py
orchestrator/app/fixtures/: seed_investigations.json
orchestrator/app/models/: investigation.py  mission.py
orchestrator/app/routers/: investigations.py  missions.py  webhooks.py
orchestrator/app/scripts/: setup_devin.py
orchestrator/app/services/: devin_client.py  event_bus.py  github_service.py  investigation_store.py  mission_store.py  playbook_router.py  session_poller.py
